multiple errors were resolved: 1. In config parser 2. In repository (safe method of reading was wrote, serialization was removed) 3. In handler (about adding tockens and actions to repository) 4. logic of adding tokens was rewritten